<resources>
    <string name="app_name">Dictionary</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="action_play_from">Play from</string>
    <string name="title_activity_topics">Topics</string>
    <string name="title_activity_parse_words_settings" translatable="false">ParseWordsSettingsActivity</string>
    <string name="title_activity_voice_selector" translatable="false">VoiceSelectorActivity</string>
    <string name="parse_words">Parse words from source</string>
    <string name="file">File</string>
    <string name="pitch">Pitch</string>
    <string name="speed">Speed</string>
    <string name="words">Words</string>
    <string name="letter_delay">Letter delay</string>
    <string name="speech">Speech</string>
    <string name="match_words">Match words</string>
    <string name="show_word">Show word</string>
    <string name="show_variants">Show variants</string>
    <string name="variants_limit">Variants limit</string>
    <string name="each_time">Each time</string>
    <string name="delay">Delay</string>
    <string name="active">Active</string>
    <string name="spelling">Spelling</string>
    <string name="translation">Translation</string>
    <string name="times">Times</string>
    <string name="repeat">Repeat</string>
    <string name="shuffle">Shuffle</string>
    <string name="import_order">Import order</string>
    <string name="sorted">Sorted</string>
    <string name="include_article">Include article</string>
    <string name="knowledge_increase">Knowledge increase</string>
    <string name="delay_per_letter_after">Delay per letter after</string>
    <string name="delay_before">Delay before</string>
    <string name="general">General</string>
    <string name="topic_delimiter">Topic delimiter</string>
    <string name="language_from">Language from</string>
    <string name="languages_to">Languages to</string>
    <string name="languages_to_speak">Languages to speak</string>
    <string name="languages_to_delete">Languages to delete</string>
    <string name="no_languages">There is no language in DB</string>
    <string name="select_knowledge">Select knowledge for words</string>
    <string name="unexpected_error">Error happened. Please check logs</string>
    <string name="word_not_selected">Word is not selected</string>
    <string name="choose_file">Choose a file</string>
    <string name="correct">Correct</string>
    <string name="languages_already_present">Language already present</string>
    <string name="languages_already_present_question">In database already present some data for language %s.Do you want
        to delete this data before import?
    </string>
    <string name="already_database_error">Not possible. Already used source DB</string>
    <string name="not_database_error">Can only be used with database</string>
    <string name="delete_word_confirmation">Delete confirmation</string>
    <string name="delete_word_confirmation_message">Do you really want to delete word "%1$s"?</string>
    <string name="voice_usage">%1$s used for %2$s</string>
    <string name="default_voice_usage">Default voice used for %s</string>
    <string name="import_started">Import started. It will take few seconds.</string>
    <string name="import_finished">Import took %d ms</string>
    <string name="articles">Articles</string>
    <string name="additional_information_delimiter">Additional information delimiter</string>
    <string name="delimiter">Delimiter</string>
    <string name="translation_delimiter">Translation delimiter</string>
    <string name="topic_flag">Topic flag</string>
    <string name="all_topics">All topics</string>
    <string name="asset">Asset</string>
    <string name="title_activity_assets">Assets</string>
    <string name="audio_not_possible">Audio not possible</string>
    <string name="audio_delayed">Audio delayed</string>
    <string name="select_voices">Select voices</string>
    <string name="default_voice">Default voice</string>
    <string name="find_words">Filter words</string>
    <string name="find_words_count">Filter words (%d)</string>
    <string name="menu_group_training">Training</string>
    <string name="menu_group_data">Data</string>
    <string name="menu_group_settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="theme_mode">Theme</string>
    <string name="theme_mode_system">System default</string>
    <string name="theme_mode_light">Light</string>
    <string name="theme_mode_dark">Dark</string>
    <string name="details_text_size_portrait">Details text size (portrait)</string>
    <string name="details_text_size_landscape">Details text size (landscape)</string>
    <string name="details_text_size_compact">Compact</string>
    <string name="details_text_size_default">Default</string>
    <string name="details_text_size_large">Large</string>
    <string name="details_text_size_landscape_balanced">Balanced</string>
    <string name="details_text_size_landscape_extra_large">Extra large</string>
    <string name="import_words">Import current into database</string>
    <string name="use_db">Use database</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="clean_db">Clean database</string>
    <string name="action_set_knowledge">Set knowledge</string>
    <string name="change_orientation">Change orientation</string>
    <string name="add_word">Add word</string>
    <string name="default_language" translatable="false">en</string>
    <string name="default_text" translatable="false">1 2 3 4 5</string>
    <string name="translations">Translations</string>
    <string name="add_translation">Add translation</string>
    <string name="save">Save</string>
    <string name="language">language</string>
    <string name="delete_translation">Delete translation</string>
    <string name="article">article</string>
    <string name="word">word</string>
    <string name="additional_information">additional information</string>
    <string name="action_create">Create</string>
    <string name="export_words_to_file">Export words to file</string>
    <string name="import_words_from_file">Import words from file</string>
    <string name="root_topic">Root topic</string>
    <string name="topic_name">Topic name</string>
    <string name="hint">Hint</string>
    <string name="database">Database</string>
    <string name="used_languages">Currently used languages</string>
    <string name="already_created">Already created</string>
    <string name="action_apply">Apply</string>
    <string name="preset_name">Preset name</string>
    <string name="configuration_presets">Settings presets</string>
    <string name="action_update">Update</string>
    <string name="word_recognition">Speech recognition</string>
    <string name="word_knowledge">Knowledge</string>
    <string name="error">error</string>
    <string name="grammar_filter">Grammar</string>
    <string name="filter">Filter</string>
    <string name="hints">Hints</string>
    <string name="all_hints">All hints</string>
    <string name="learn">Learn</string>
    <string name="practice">Practice</string>
    <string name="answer">answer</string>
    <string name="title_activity_match_article" translatable="false">MatchArticleActivity</string>
    <string name="match_word_article">Match word article</string>
    <string name="order_words_in_sentence">Order words in sentence</string>
    <string name="all_translations">Play all translations</string>
    <string name="example_language_recognition">Example de-DE</string>
    <string name="default_language_recognition" translatable="false">de-DE</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="file_cannot_be_accessed">File cannot be accessed.</string>
    <string name="no_sentences">No sentences available.</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_url" translatable="false">https://victorsenia.github.io/dictionary-apk/privacy-policy.html</string>
</resources>


