<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
                name="viewModel"
                type="org.leo.dictionary.apk.activity.viewmodel.EditWordViewModel"/>
    </data>
    <LinearLayout
            android:id="@+id/edit_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activity.fragment.EditWordFragment"
            android:orientation="horizontal"
            android:background="@drawable/word_background">

        <EditText
                android:id="@+id/text_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/language"
                android:text="@={viewModel.data.language}" android:minHeight="48dp" android:layout_weight="0"
                android:layout_gravity="center_vertical"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:layout_gravity="center_vertical">
            <EditText
                    android:text="@={viewModel.data.article}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/article"
                    android:id="@+id/text_article" android:minHeight="48dp"/>
            <EditText
                    android:text="@={viewModel.data.word}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/word"
                    android:id="@+id/text_word" android:minHeight="48dp"/>
            <EditText
                    android:text="@={viewModel.data.additionalInformation}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/additional_information"
                    android:id="@+id/text_additional_information" android:minHeight="48dp"/>
        </LinearLayout>
        <Button
                android:text="@string/action_play_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/play_word" android:layout_weight="0"
                style="@style/Widget.DictionaryApk.Button.Icon.FilledTonal"
                android:drawableLeft="@android:drawable/ic_media_play"
                android:layout_gravity="center_vertical"/>
    </LinearLayout>
</layout>