...
            <EditText
                    android:text="@={viewModel.data.translation}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/translation"
                    android:id="@+id/text_translation" android:minHeight="48dp" android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
            <Button
                    android:text="@string/action_play_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/play_translation" android:layout_weight="0"
                    style="@style/Widget.DictionaryApk.Button.Icon.FilledTonal"
                    android:drawableLeft="@android:drawable/ic_media_play"
                    android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <Button
                android:text="@string/delete_translation"
...
